[package]
name = "goxidize"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A link shortener"
repository = "https://github.com/caizixian/goxidize"
homepage = "https://github.com/caizixian/goxidize"
readme = "README.md"
documentation = "https://docs.rs/goxidize"
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "goxidize"

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "offline"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.18"
tracing-actix-web = { version = "0.7.2", features = ["opentelemetry_0_18"] }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
lazy_static = "1.4"
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.11"
tokio = { version = "1.25", features = ["macros", "sync", "rt"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
