[package]
name = "goxidize"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A link shortener"
repository = "https://github.com/caizixian/goxidize"
homepage = "https://github.com/caizixian/goxidize"
readme = "README.md"
documentation = "https://docs.rs/goxidize"
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "goxidize"

[dependencies]
actix-web = "4.5"
actix-files = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.28"
tracing-actix-web = { version = "0.7.14", features = ["opentelemetry_0_26"] }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
lazy_static = "1.5"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.26"
tokio = { version = "1.41", features = ["macros", "sync", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
